--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -751,7 +751,8 @@
                                     <label class="col-sm-2" style="padding: 0.5em 0px;">בחרו שנה:</label>
                                     <div class="col-sm-4">
                                         <select id="dsb_select_year" class="form-control">
-                                            <option value="2022" selected>2022</option>
+                                            <option value="2023" selected>2023</option>
+                                            <option value="2022">2022</option>
                                             <option value="2021">2021</option>
                                             <option value="2020">2020</option>
                                         </select>
@@ -1027,7 +1028,8 @@
                                             <label class="col-sm-2" style="padding: 0.5em 0px;">שנה</label>
                                             <div class="col-sm-10">
                                                 <select template_id="select_year" class="form-control">
-                                                    <option value="2022" selected>2022</option>
+                                                    <option value="2023" selected>2023</option>
+                                                    <option value="2022">2022</option>
                                                     <option value="2021">2021</option>
                                                     <option value="2020">2020</option>
                                                     <option value="2019">2019</option>
@@ -1096,7 +1098,8 @@
                                             <div class="col-sm-10">
                                                 <select template_id="select_year_ytd" class="form-control">
                                                     <option value="last_12_months" selected>שנה אחורה מהיום</option>
-                                                    <option value="2022">2022 - YTD</option>
+                                                    <option value="2023">2023 - YTD</option>
+                                                    <option value="2022">2022</option>
                                                     <option value="2021">2021</option>
                                                     <option value="2020">2020</option>
                                                 </select>
