--- a/Road to Recovery/pages/editRemarkModal.html
+++ b/Road to Recovery/pages/editRemarkModal.html
@@ -12,19 +12,19 @@
     <div class="modal-content modal-lg">
         <div class="modal-header">
             <button id="overRideBS_modal_4changeClose_x" type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true" onclick="">&times;</span>
+                <span aria-hidden="true" onclick="editRemarkAbort()">&times;</span>
             </button>
             <h2 class="modal-title" id="editRemarkModalTitle">עריכת הערות</h2>
         </div>
         <div class="modal-body">
             <div id="editRemarkModal">
-                <textarea class="text-editor">
+                <textarea id="editRemarkTextEditor" class="text-editor">
 
                 </textarea>
             </div>
             <div class="text-right modal-footer">
-                <button type="button" onclick="" id="" class="btn btn-secondary">אישור</button>
-                <button type="button" class="btn btn-secondary" onclick="" data-dismiss="modal">ביטול</button>
+                <button type="button" onclick="updateRemark()" id="" class="btn btn-secondary">אישור</button>
+                <button type="button" class="btn btn-secondary" onclick="editRemarkAbort()" data-dismiss="modal">ביטול</button>
             </div>
         </div>
     </div>
