--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -835,7 +835,8 @@
         let arrayOF_areasObj = [];
         let morningRidePats = [];
         let afterNoonRidePats = [];
-        let tomorrowRidePats = [];
+        let tomorrowMorningRidePats = [];
+        let tomorrowAfternoonRidePats = [];
         let futureRidePats = [];
         let allReadyCountedRidePats = [];
         let candidate4IhaveSeen;
@@ -895,7 +896,7 @@
             });
 
             $(`#${tableNames.TOMORROW_AFTERNOON} tbody`).on('click', '.remove', function () {
-                confirmDelete(this, tTomorrowMorning);
+                confirmDelete(this, tTomorrowAfternoon);
             });
 
             $(`#${tableNames.FUTURE} tbody`).on('click', '.remove', function () {
@@ -2166,7 +2167,8 @@
 
             morningRidePats = [];
             afterNoonRidePats = [];
-            tomorrowRidePats = [];
+            tomorrowMorningRidePats = [];
+            tomorrowAfternoonRidePats = [];
             futureRidePats = [];
 
             let areasToShow_arr = JSON.parse(localStorage.getItem('areasToShow_arr'));
@@ -2177,13 +2179,15 @@
             if (areasToShow_arr !== null && areasToShow_arr.length === 0 && allSortsSwitch) { //dont show any
                 $('#wait').hide();
 
-                tMorning = $('#datatable-morning').DataTable({ data: [], destroy: true });
+                tMorning = $(`#${tableNames.MORNING}`).DataTable({ data: [], destroy: true });
 
-                tAfternoon = $('#datatable-afternoon').DataTable({ data: [], destroy: true });
+                tAfternoon = $(`#${tableNames.AFTERNOON}`).DataTable({ data: [], destroy: true });
 
-                tTomorrowMorning = $('#datatable-tomorrow-morning').DataTable({ data: [], destroy: true });
+                tTomorrowMorning = $(`#${tableNames.TOMORROW_MORNING}`).DataTable({ data: [], destroy: true });
 
-                tFuture = $('#datatable-future').DataTable({ data: [], destroy: true });
+                tTomorrowAfternoon = $(`#${tableNames.TOMORROW_AFTERNOON}`).DataTable({ data: [], destroy: true });
+
+                tFuture = $(`#${tableNames.FUTURE}`).DataTable({ data: [], destroy: true });
                 return;
             }
 
@@ -2292,27 +2296,32 @@
                             isPatientStatusShouldPaintRow: isPatientStatusShouldPaintRow,
                         }
 
-                        if (thisRidePatDate.toLocaleDateString() === new Date().toLocaleDateString()) {                  //<---- today
+                        if (thisRidePatDate.toLocaleDateString() === new Date().toLocaleDateString()) {                         //<---- today
                             if (thisRidePatDate.getHours() < 12) {                                                              //<---- today morning
 
                                 morningRidePats.push(thisRidePat);
-                            } else {                                                                                          //<---- today afternoon
+                            } else {                                                                                           //<---- today afternoon
 
                                 afterNoonRidePats.push(thisRidePat);
                             }
 
-                        } else if (thisRidePatDate.toLocaleDateString() === tomorrowDate.toLocaleDateString()) {        //<---- tomorrow
+                        } else if (thisRidePatDate.toLocaleDateString() === tomorrowDate.toLocaleDateString()) {              //<---- tomorrow
 
-                            thisRidePat.date = thisRidePatDate.toLocaleString('he-IL', { dateStyle: 'short' });
-                            tomorrowRidePats.push(thisRidePat);
-                        } else if (thisRidePatDate > tomorrowDate) {                                                     //<---- future
+                            if (thisRidePatDate.getHours() < 12) {                                                           //<---- tomorrow morning
+                                thisRidePat.date = thisRidePatDate.toLocaleString('he-IL', { dateStyle: 'short' });
+
+                                tomorrowMorningRidePats.push(thisRidePat);
+                            } else {                                                                                         //<---- tomorrow afternoon
+                                thisRidePat.date = thisRidePatDate.toLocaleString('he-IL', { dateStyle: 'short' });
+
+                                tomorrowAfternoonRidePats.push(thisRidePat);
+                            }
+
+                        } else if (thisRidePatDate > tomorrowDate) {                                                         //<---- future
 
                             thisRidePat.date = thisRidePatDate.toLocaleString('he-IL', { dateStyle: 'short' });
                             futureRidePats.push(thisRidePat);
                         }
-
-
-
 
                     }
                     let arrayOf_IHaveSeenAllready = localStorage.getItem('arrayOf_IHaveSeenAllready') ?
@@ -2324,7 +2333,7 @@
                     //           || ↓DATATABLES PROPERTIES↓||
                     //           ============================
 
-                    tMorning = $('#datatable-morning').DataTable({
+                    tMorning = $(`#${tableNames.MORNING}`).DataTable({
                         data: morningRidePats,
                         rowId: 'ridePatNum',
                         dom: controllersLayout,
@@ -2423,7 +2432,7 @@
                         },
                     });
 
-                    tAfternoon = $('#datatable-afternoon').DataTable({
+                    tAfternoon = $(`#${tableNames.AFTERNOON}`).DataTable({
                         rowId: 'ridePatNum',
                         dom: controllersLayout,
                         buttons: [
@@ -2550,7 +2559,7 @@
                         },
                     });
 
-                    tTomorrowMorning = $('#datatable-tomorrow-morning').DataTable({
+                    tTomorrowMorning = $(`#${tableNames.TOMORROW_MORNING}`).DataTable({
                         rowId: 'ridePatNum',
                         dom: controllersLayout,
                         buttons: [
@@ -2560,7 +2569,7 @@
                                 title: `ניהול הסעות למחר ${getNext_X_DaysDateAsString(1)}`,
                             }
                         ],
-                        data: tomorrowRidePats,
+                        data: tomorrowMorningRidePats,
                         stateSave: true,
                         destroy: true,
                         "pageLength": 100,
@@ -2660,7 +2669,118 @@
 
                     });
 
-                    tFuture = $('#datatable-future').DataTable({
+                    tTomorrowAfternoon = $(`#${tableNames.TOMORROW_AFTERNOON}`).DataTable({
+                        rowId: 'ridePatNum',
+                        dom: controllersLayout,
+                        buttons: [
+                            {
+                                extend: 'excelHtml5',
+                                text: 'ייצוא לאקסל',
+                                title: `ניהול הסעות למחר ${getNext_X_DaysDateAsString(1)}`,
+                            }
+                        ],
+                        data: tomorrowAfternoonRidePats,
+                        stateSave: true,
+                        destroy: true,
+                        "pageLength": 100,
+                        columns: [
+                            //when add column be aware of columnDefs refernces [i] IMPORTANT !!!
+                            { data: "date" },                                //0
+                            { data: "time" },                                //1
+                            { data: "origin" },                              //2
+                            { data: "destination" },                         //3
+                            { data: "patient" },                             //4
+                            { data: "patientAge" },                          //5
+                            { data: "driver" },                              //6
+                            { data: "status" },                              //7
+                            { data: "lastModified" },                        //8
+                            { data: "remark" },                              //9
+                            { data: "isAnonymous" },                         //10
+                            { data: "buttons" },                             //11
+                        ],
+                        "columnDefs": [
+                            { targets: 1, type: 'de_time' },
+                            { width: '4%', "targets": [0, 1] },
+                            { width: '6%', "targets": [2, 3] },
+                            { width: '15%', "targets": [4] },
+                            { width: '2%', "targets": [5] },
+                            { width: '5%', "targets": [6, 7, 8, 9] },
+                            { width: '0%', "targets": [10] },
+                            { width: '25%', "targets": [11] },
+                            {
+                                targets: 5, createdCell: (cell, cellData, rowData, rowIndex, colIndex) => { //5 is driver column
+
+                                    cell.className += ' driver_td';
+                                    if (!rowData.hasDriver) {
+
+                                        let ridePatTime_td;
+                                        if (rowData['time'] === 'אחה"צ') {
+
+                                            ridePatTime_td = [12, 0];
+                                        } else {
+
+                                            ridePatTime_td = $.trim(rowData['time']).split(':');
+                                        }
+
+                                        const hh = parseInt(ridePatTime_td[0]);
+                                        const mm = parseInt(ridePatTime_td[1]);
+
+                                        const suitableClass = classManager.getSuitableClassS_4thisTime("datatable-tomorrow-morning", hh, mm);
+                                        $(cell).addClass(suitableClass);
+
+                                    }
+                                }
+                            },
+                            {
+                                targets: 7, createdCell: (cell, cellData, rowData, rowIndex, colIndex) => { //6 is status column
+                                    if (cellData.indexOf("הגענו ליעד") !== -1 ||
+                                        cellData.indexOf("Reached destination") !== -1) {
+
+                                        $(cell).addClass('reached2destination');
+                                    } else if (cellData.includes('שובץ נהג') || cellData.includes('Driver registered')) {
+
+                                        if (rowData["isAnonymous"]) {
+
+                                            $(cell.parentElement).addClass('driverAssign2AnonymousRide');
+                                        }
+                                    }
+                                }
+                            },
+                            {
+                                targets: 8, createdCell: (cell, cellData, rowData, rowIndex, colIndex) => {//lastModified column
+
+                                    const thisRidePatNum = rowData.ridePatNum;
+                                    const thisridePatObj = arr_rides.find((r) => r.RidePatNum === thisRidePatNum);
+                                    const intValue = convert2DBDateToInt(thisridePatObj.LastModified);//the reasone why we get the origial obj is to support pc with english date
+                                    const thisRidePatLastModified = new Date(intValue)
+                                    const isSeenAllReady = arrayOf_IHaveSeenAllready.includes(thisRidePatNum);
+
+                                    if (isWithin2HoursSinceChange(thisRidePatLastModified) && !isSeenAllReady) {
+                                        cell.classList.add('within2HoursSinceChange');
+                                        increaseCounter(tableNames.TOMORROW_MORNING, thisRidePatNum);
+                                    }
+                                }
+                            },
+                            { targets: 8, className: 'last-modified_td' },
+                            { targets: 8, type: 'last_modifiedSort' },
+                            { targets: 9, className: 'text-left-strong' },
+                            { targets: [10], visible: false },
+                            { targets: [11], orderable: false }
+
+                        ],
+                        autoWidth: false,
+                        createdRow: function (row, data, dataIndex) {
+
+                            if (data.isPatientStatusShouldPaintRow) {
+
+                                $(row).addClass("highlightRow-after-patientStatusModal");
+                            }
+                        },
+
+                    });
+
+
+                    tFuture = $(`#${tableNames.FUTURE}`).DataTable({
                         rowId: 'ridePatNum',
                         dom: controllersLayoutForFutureTable,
                         fnInitComplete: function (x) {
@@ -3610,7 +3730,7 @@
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse4">
                                             <div class="panel-body">
-                                                <table id="datatable-tomorrow-morning"
+                                                <table id="datatable-tomorrow-afternoon"
                                                        class="table table-striped table-bordered hover">
                                                     <thead>
                                                         <tr>
